# Data-Structure-Algorithm

./: CMakeLists.txt  main.cpp
ArrayList/: arrayListType.h  main.cpp
ClockType/: clockType.cpp  clockType.h  main.cpp
PersonType/: PersonType.cpp  PersonType.h  main.cpp
